Move embedded model path to config